--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2003-12-24  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR bootstrap/13068
+	Backport from mainline:
+		2003-05-09  Matt Kraai <kraai@alumni.cmu.edu>
+
+		* mklibgcc.in: Remove extra quotes.
+		2003-05-08  Aldy Hernandez  <aldyh@redhat.com>
+
+		* mklibgcc.in: Use mkinstalldirs when installing multilib
+		directories.
+
 2003-12-24  Roger Sayle  <roger@eyesopen.com>
 
 	Backport from mainline:
