2003-12-25  Andrew Pinski  <pinskia@physics.uc.edu>
        PR java/13404
        * parse.y: (catch_clause_parameter): Return early if $3, aka
        formal_parameter, is null.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75020 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-25  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR java/13404
+	* parse.y: (catch_clause_parameter): Return early if $3, aka 
+	formal_parameter, is null.
+
 2003-12-20  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* class.c: Remove uses of "register" specifier in
