--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2003-12-25  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR C++/13429, C/11944
+	* c-common.c (c_build_qualified_type): Return early when type is 
+	error_mark_node.
+	(c_apply_type_quals_to_decl): Likewise.
+
 2003-12-25  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/alpha/alpha-modes.def: Fix comment formatting.
