2003-12-25  Andreas Tobler  <a.tobler@schweiz.ch>
	* libltdl/ltdl.c (HAVE_DYLD): Remove ifdef conditional for
	darwin. Fixed by fixinclude now.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75024 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-25  Andreas Tobler  <a.tobler@schweiz.ch>
+
+	* libltdl/ltdl.c (HAVE_DYLD): Remove ifdef conditional for 
+	darwin. Fixed by fixinclude now.
+
 2003-12-25  Michael Koch  <konqueror@gmx.de>
 
 	* java/net/ServerSocket.java bind():
