2003-12-25  Andrew Pinski  <pinskia@physics.uc.edu>
        * parse.y (catch_clause_parameter): Fix typo.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75025 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,5 +1,7 @@
 2003-12-25  Andrew Pinski  <pinskia@physics.uc.edu>
 
+	* parse.y (catch_clause_parameter): Fix typo.
+
 	PR java/13404
 	* parse.y: (catch_clause_parameter): Return early if $3, aka 
 	formal_parameter, is null.
