* config/m32r/m32r.md: Remove a constraint from a splitter.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75026 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-25  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/m32r/m32r.md: Remove a constraint from a splitter.
+
 2003-12-25  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	PR C++/13429, C/11944
