--- a/gcc/config/m32r/m32r.md
+++ b/gcc/config/m32r/m32r.md
@@ -500,7 +500,7 @@
 
 (define_split
   [(set (match_operand:SI 0 "register_operand" "")
-	(match_operand:SI 1 "seth_add3_operand" "i"))]
+	(match_operand:SI 1 "seth_add3_operand" ""))]
   "TARGET_ADDR32"
   [(set (match_dup 0)
 	(high:SI (match_dup 1)))
