--- a/gcc-3_3-branch/gcc/cp/ChangeLog
+++ b/gcc-3_3-branch/gcc/cp/ChangeLog
@@ -1,3 +1,12 @@
+2003-12-26  Gabriel Dos Reis  <gdr@integrable-solutions.net>
+
+	Backport from mainline:
+	2003-12-22  Mark Mitchell  <mark@codesourcery.com>
+
+	PR C++/12862
+	* decl.c (pushdecl): Look up all namespace-scope entities in their 
+	corresponding namespace.
+
 2003-12-22  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	PR c++/5050
