--- a/gcc-3_3-branch/gcc/cp/ChangeLog
+++ b/gcc-3_3-branch/gcc/cp/ChangeLog
@@ -1,6 +1,14 @@
 2003-12-26  Gabriel Dos Reis  <gdr@integrable-solutions.net>
 
 	Backport from mainline:
+	2003-12-16  Mark Mitchell  <mark@codesourcery.com>
+
+        PR c++/12696
+        * decl.c (reshape_init): Recover quickly from errors.
+	
+2003-12-26  Gabriel Dos Reis  <gdr@integrable-solutions.net>
+
+	Backport from mainline:
 	2003-12-22  Mark Mitchell  <mark@codesourcery.com>
 
 	PR C++/12862
