--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -2090,11 +2090,11 @@
 
 (define_insn "ldm_h8300s_2_normal"
   [(parallel
-     [(set (reg:SI SP_REG)
-	   (plus:SI (reg:SI SP_REG) (const_int 8)))
-      (set (mem:SI (plus:SI (reg:SI SP_REG) (const_int 4)))
+     [(set (reg:HI SP_REG)
+	   (plus:HI (reg:HI SP_REG) (const_int 8)))
+      (set (mem:SI (plus:HI (reg:HI SP_REG) (const_int 4)))
 	   (match_operand:SI 0 "register_operand" ""))
-      (set (mem:SI (reg:SI SP_REG))
+      (set (mem:SI (reg:HI SP_REG))
 	   (match_operand:SI 1 "register_operand" ""))])]
   "TARGET_H8300S && TARGET_NORMAL_MODE
    && ((REGNO (operands[0]) == 0 && REGNO (operands[1]) == 1)
