--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-26  Michael Koch  <konqueror@gmx.de>
+
+	* Makefile.am (rmi_java_source_files):
+	Added gnu/java/rmi/server/RMIVoidValue.java.
+	* Makefile.in: Regenerated.
+
 2003-12-26  Guilhem Lavaux  <guilhem@kaffe.org>
             Mark Wielaard  <mark@klomp.org>
 
