2003-12-25  Andrew Pinski  <pinskia@physics.uc.edu>
        * config/darwin.h (LINK_COMMAND_SPEC): Arrange
        -fprofile-generate to imply -lgcov.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75038 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-26  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	* config/darwin.h (LINK_COMMAND_SPEC): Arrange
+	-fprofile-generate to imply -lgcov.
+
 2003-12-26  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/h8300/h8300.md (ldm_h8300s_2_normal): Use HImode for
