2003-12-26  Guilhem Lavaux  <guilhem@kaffe.org>
	* java/io/FileInputStream.java
	(FileInputStream(String)): Call FileInputStream(File).
	(FileInputStream(File)): Check whether the argument is a directory.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75039 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-26  Guilhem Lavaux  <guilhem@kaffe.org>
+
+	* java/io/FileInputStream.java
+	(FileInputStream(String)): Call FileInputStream(File).
+	(FileInputStream(File)): Check whether the argument is a directory.
+
 2003-12-26  Michael Koch  <konqueror@gmx.de>
 
 	* Makefile.am (rmi_java_source_files):
