2003-12-27  Guilhem Lavaux  <guilhem@kaffe.org>
	* java/rmi/Naming.java (lookup): Check if the first character of the
	filename returned by URL.getFile() is a '/', only if it is the case
	we cut this first character and call the registry with the good name.
	(bind): Likewise.
	(rebind): Likewise.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75044 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,11 @@
+2003-12-27  Guilhem Lavaux  <guilhem@kaffe.org>
+
+	* java/rmi/Naming.java (lookup): Check if the first character of the
+	filename returned by URL.getFile() is a '/', only if it is the case
+	we cut this first character and call the registry with the good name.
+	(bind): Likewise.
+	(rebind): Likewise.
+
 2003-12-26  Guilhem Lavaux  <guilhem@kaffe.org>
 	    Mark Wielaard  <mark@klomp.org>
 
