Backport from mainline.
        2003-12-16  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

        PR c++/2294
        * decl.c (push_overloaded_decl): always construct an OVERLOAD
        if the declaration comes from an using declaration.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75045 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/cp/ChangeLog
+++ b/gcc-3_3-branch/gcc/cp/ChangeLog
@@ -1,3 +1,12 @@
+2003-12-27  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+
+	Backport from mainline:
+	2003-12-16  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+
+	PR c++/2294
+	* decl.c (push_overloaded_decl): always	construct an OVERLOAD
+	if the declaration comes from an using declaration.
+
 2003-12-26  Gabriel Dos Reis  <gdr@integrable-solutions.net>
 
 	Backport from mainline:
