Backport from mainline: 	2003-11-14  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
	PR c++/2294
	* g++.dg/lookup/using9.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75049 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2003-12-27  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+
+	Backport from mainline:
+	2003-11-14  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+
+	PR c++/2294
+	* g++.dg/lookup/using9.C: New test.
+
 2003-12-23  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* gcc.dg/noreturn-7.c: New test.
