--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2003-12-27  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/i386/i386-interix.h: Remove uses of "register"
+	specifier in declarations of arguments and local variables.
+	* config/i386/i386.c: Likewise.
+	* config/i386/i386elf.h: Likewise.
+	* config/i386/ptx4-i.h: Likewise.
+	* config/i386/sysv4.h: Likewise.
+
 2003-12-26  Fariborz Jahanian <fjahanian@apple.com>
 	    Geoffrey Keating <geoffk@apple.com>
 	    David Edelsohn <edelsohn@gnu.org>
