--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,13 @@
 2003-12-27  Michael Koch  <konqueror@gmx.de>
 
+	* gnu/java/net/protocol/http/Connection.java
+	(connect): Call receiveReply().
+	(receiveReply): Renamed from getHttpHeaders().
+	(getOutputStream): Moved check on doOutput before check for connection
+	state.
+
+2003-12-27  Michael Koch  <konqueror@gmx.de>
+
 	* javax/print/attribute/ResolutionSyntax.java,
 	javax/print/attribute/SetOfIntegerSyntax.java,
 	javax/print/attribute/Size2DSyntax.java,
