2003-12-27  Michael Koch  <konqueror@gmx.de>
	* gnu/java/net/protocol/http/Connection.java
	(getRequestProperty): Removed.
	(setRequestProperty): Removed.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75175 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,6 +1,12 @@
 2003-12-27  Michael Koch  <konqueror@gmx.de>
 
 	* gnu/java/net/protocol/http/Connection.java
+	(getRequestProperty): Removed.
+	(setRequestProperty): Removed.
+
+2003-12-27  Michael Koch  <konqueror@gmx.de>
+
+	* gnu/java/net/protocol/http/Connection.java
 	(connect): Call receiveReply().
 	(receiveReply): Renamed from getHttpHeaders().
 	(getOutputStream): Moved check on doOutput before check for connection
