--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-28  Mostafa Hagog  <mustafa@il.ibm.com>
+
+	* sbitmap.c (sbitmap_union_of_diff_cg, sbitmap_a_and_b_cg,
+	sbitmap_a_xor_b_cg): Accumulate "changed" properly.
+	(sbitmap_not): Zero all bits past n_bit.
+
 2003-12-27  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>
 
 	PR opt/13159
