PR c++/13070 	* decl.c (duplicate_decls): When setting the type of an anticipated 	declaration, merge the existing type attributes.
	* g++.dg/warn/format3.C: New test case.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75185 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-28  Roger Sayle  <roger@eyesopen.com>
+
+	PR c++/13070
+	* decl.c (duplicate_decls): When setting the type of an anticipated
+	declaration, merge the existing type attributes.
+
 2003-12-25  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	PR c++/13268, c++/13339
