--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-28  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/13009
+	* call.c (build_special_member_call): Do not assume that we have a
+	pointer to the complete object in an assignment operator.
+
 2003-12-28  Roger Sayle  <roger@eyesopen.com>
 
 	PR c++/13070
