--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-28  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/13009
+	* g++.dg/init/assign1.C: New test.
+
 2003-12-28  Roger Sayle  <roger@eyesopen.com>
 
 	PR c++/13070
