--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,11 @@
 2003-12-28  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/13081
+	* g++.dg/opt/inline6.C: New test.
+
+	PR c++/12613
+	* g++.dg/parse/error9.C: New test.
+
 	* gcc.dg/const-elim-1.c: XFAIL on arm-*-*.
 
 2003-12-28  Mark Mitchell  <mark@codesourcery.com>
