--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-28  Roger Sayle  <roger@eyesopen.com>
+
+	PR c++/13070
+	* g++.dg/warn/format3.C: New test case.
+
 2003-12-27  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
 
 	Backport from mainline:
