--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-29  Phil Edwards  <phil@codesourcery.com>
+
+	* doc/cppopts.texi:  Use of -idirafter, -iprefix, -iwithprefix, and
+	-iwithprefixbefore is not discouraged.
+
 2003-12-28  Mostafa Hagog  <mustafa@il.ibm.com>
 
 	* sbitmap.c (sbitmap_union_of_diff_cg, sbitmap_a_and_b_cg,
