--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-29  Jan Hubicka  <jh@suse.cz>
+
+	* toplev.c (rest_of_handle_loop_optimize): Enable LOOP_AUTO_UNROLL.
+
 2003-12-29  Phil Edwards  <phil@codesourcery.com>
 
 	* doc/cppopts.texi:  Use of -idirafter, -iprefix, -iwithprefix, and
