PR c++/12403 	* parser.c (cp_parser_template_declaration_after_export): Set up 	template specialization scope in case of explicit specialization.
	* g++.dg/parse/explicit1.C: New test.
	* g++.old-deja/g++.pt/explicit71.C: Adjust expected error.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75199 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-29  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	PR c++/12403
+	* parser.c (cp_parser_template_declaration_after_export): Set up
+	template specialization scope in case of explicit specialization.
+
 2003-12-28  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/13081
