PR c++/13289 	* semantics.c (finish_id_expression): Only check if the type of 	a template argument is integral or enumeration when it is not 	dependent.
	* g++.dg/parse/nontype1.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75200 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,12 @@
 2003-12-29  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
 
+	PR c++/13289
+	* semantics.c (finish_id_expression): Only check if the type of
+	a template argument is integral or enumeration when it is not
+	dependent.
+
+2003-12-29  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
 	PR c++/12403
 	* parser.c (cp_parser_template_declaration_after_export): Set up
 	template specialization scope in case of explicit specialization.
