PR fortran/12632 	* fold-const.c (fold) <COND_EXPR>: Don't fold a constant condition, 	if the type of the selected branch doesn't match its' parent.
	* com.c (ffecom_subscript_check_): Take as an extra argument the
	(possibly NULL) decl of the array.  Don't create unnecessary tree
	nodes if the array index is known to be safe at compile-time.
	If the array index is unsafe, force the array decl into memory to
	avoid RTL expansion problems.
	(ffecom_array_ref_): Update calls to ffecom_subscript_check_.
	(ffecom_char_args_x_): Likewise.

	* g77.dg/12632.f: New test case.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75203 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-29  Roger Sayle  <roger@eyesopen.com>
+
+	PR fortran/12632
+	* fold-const.c (fold) <COND_EXPR>: Don't fold a constant condition,
+	if the type of the selected branch doesn't match its' parent.
+
 2003-12-29  Jan Hubicka  <jh@suse.cz>
 
 	* coverage.c (read_counts_file): Better error messages; cause corrupted
