cp: 	PR c++/12774 	* typeck.c (comp_array_types): Fold non-dependent domains for 	ABI-1. testsuite: 	PR c++/12774 	* g++.dg/template/array1-1.C: New test. 	* g++.dg/template/array1-2.C: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75204 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-29  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/12774
+	* typeck.c (comp_array_types): Fold non-dependent domains for
+	ABI-1.
+
 2003-12-29  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
 
 	PR c++/13289
