--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-29  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/12774
+	* g++.dg/template/array1-1.C: New test.
+	* g++.dg/template/array1-2.C: New test.
+
 2003-12-29  Roger Sayle  <roger@eyesopen.com>
 
 	PR fortran/12632
