* config/arm/arm-cores.def: Add cost function. 	* config/arm/arm.c (arm_*_rtx_costs): New functions. 	(arm_rtx_costs): Remove 	(struct processors): Add rtx_costs field. 	(all_cores, all_architectures): Ditto. 	(arm_override_options): Set targetm.rtx_costs. 	(thumb_rtx_costs): New function. 	(arm_rtx_costs_1): Remove cases handled elsewhere. 	* config/arm/arm.h (processor_type): Add COSTS parameter.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75205 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/csl-arm-branch/gcc/ChangeLog
+++ b/csl-arm-branch/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2003-12-29  Paul Brook  <paul@codesourcery.com>
+
+	* config/arm/arm-cores.def: Add cost function.
+	* config/arm/arm.c (arm_*_rtx_costs): New functions.
+	(arm_rtx_costs): Remove
+	(struct processors): Add rtx_costs field.
+	(all_cores, all_architectures): Ditto.
+	(arm_override_options): Set targetm.rtx_costs.
+	(thumb_rtx_costs): New function.
+	(arm_rtx_costs_1): Remove cases handled elsewhere.
+	* config/arm/arm.h (processor_type): Add COSTS parameter.
+
 2003-12-29  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* config/arm/arm.md (generic_sched): arm926 has its own scheduler.
