--- a/csl-arm-branch/gcc/testsuite/ChangeLog
+++ b/csl-arm-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-29  Mark Mitchell  <mark@codesourcery.com>
+
+	* gcc.dg/builtins-config.h: Include <ctype.h>, not <limits.h>.
+
 2003-12-28  Mark Mitchell  <mark@codesourcery.com>
 
 	* gcc.dg/const-elim-1.c: XFAIL on arm-*-*.
