* g++.old-deja/g++.pt/static11.C: Correct XFAIL syntax.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75218 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/csl-arm-branch/gcc/testsuite/ChangeLog
+++ b/csl-arm-branch/gcc/testsuite/ChangeLog
@@ -1,5 +1,7 @@
 2003-12-29  Mark Mitchell  <mark@codesourcery.com>
 
+	* g++.old-deja/g++.pt/static11.C: Correct XFAIL syntax.
+
 	* gcc.dg/builtins-config.h: Include <ctype.h>, not <limits.h>.
 
 2003-12-28  Mark Mitchell  <mark@codesourcery.com>
