* g++.old-deja/g++.pt/static11.C: Correct XFAIL syntax.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75219 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-29  Mark Mitchell  <mark@codesourcery.com>
+
+	* g++.old-deja/g++.pt/static11.C: Correct XFAIL syntax.
+
 2003-12-29  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/12774
