--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -17168,32 +17168,60 @@
   [(match_operand:SI 0 "register_operand" "")]
   "TARGET_STACK_PROBE"
 {
-  if (TARGET_64BIT)
-    emit_insn (gen_allocate_stack_worker_rex64 (operands[0]));
+  if (reload_completed)
+    {
+      if (TARGET_64BIT)
+	emit_insn (gen_allocate_stack_worker_rex64_postreload (operands[0]));
+      else
+	emit_insn (gen_allocate_stack_worker_postreload (operands[0]));
+    }
   else
-    emit_insn (gen_allocate_stack_worker_1 (operands[0]));
+    {
+      if (TARGET_64BIT)
+	emit_insn (gen_allocate_stack_worker_rex64 (operands[0]));
+      else
+	emit_insn (gen_allocate_stack_worker_1 (operands[0]));
+    }
   DONE;
 })
 
 (define_insn "allocate_stack_worker_1"
   [(unspec:SI [(match_operand:SI 0 "register_operand" "a")] UNSPEC_STACK_PROBE)
    (set (reg:SI 7) (minus:SI (reg:SI 7) (match_dup 0)))
-   (clobber (match_dup 0))
+   (clobber (match_scratch:SI 1 "=0"))
    (clobber (reg:CC 17))]
   "!TARGET_64BIT && TARGET_STACK_PROBE"
   "call\t__alloca"
   [(set_attr "type" "multi")
    (set_attr "length" "5")])
 
+(define_expand "allocate_stack_worker_postreload"
+  [(parallel [(unspec:SI [(match_operand:SI 0 "register_operand" "a")]
+			   UNSPEC_STACK_PROBE)
+	      (set (reg:SI 7) (minus:SI (reg:SI 7) (match_dup 0)))
+	      (clobber (match_dup 0))
+	      (clobber (reg:CC 17))])]
+  ""
+  "")
+
 (define_insn "allocate_stack_worker_rex64"
   [(unspec:DI [(match_operand:DI 0 "register_operand" "a")] UNSPEC_STACK_PROBE)
    (set (reg:DI 7) (minus:DI (reg:DI 7) (match_dup 0)))
-   (clobber (match_dup 0))
+   (clobber (match_scratch:DI 1 "=0"))
    (clobber (reg:CC 17))]
   "TARGET_64BIT && TARGET_STACK_PROBE"
   "call\t__alloca"
   [(set_attr "type" "multi")
    (set_attr "length" "5")])
+
+(define_expand "allocate_stack_worker_rex64_postreload"
+  [(parallel [(unspec:DI [(match_operand:DI 0 "register_operand" "a")]
+			   UNSPEC_STACK_PROBE)
+	      (set (reg:DI 7) (minus:DI (reg:DI 7) (match_dup 0)))
+	      (clobber (match_dup 0))
+	      (clobber (reg:CC 17))])]
+  ""
+  "")
 
 (define_expand "allocate_stack"
   [(parallel [(set (match_operand:SI 0 "register_operand" "=r")
