2003-12-30  Jan Hubicka  <jh@suse.cz>
        PR target/13456
        * i386.md (allocate_stack_worker):  Use different pattern for pre and
        post reload expansion.
        (allocate_stack_worker_1, allocate_stack_worker_rex64): Use
        match_scratch.
        (allocate_stack_worder_1_postreload,
        allocate_stack_worker_rex64_postreload): New.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75221 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,6 @@
 2003-12-30  Jan Hubicka  <jh@suse.cz>
 
+	PR target/13456
 	* i386.md (allocate_stack_worker):  Use different pattern for pre and
 	post reload expansion.
 	(allocate_stack_worker_1, allocate_stack_worker_rex64): Use
