cp: 	PR c++/13445 	* pt.c (instantiate_class_template): Push to class's scope before 	tsubsting base. testsuite: 	PR c++/13445 	* g++.dg/template/scope2.C: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75223 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/cp/ChangeLog
+++ b/gcc-3_3-branch/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-11  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/13445
+	* pt.c (instantiate_class_template): Push to class's scope before
+	tsubsting base.
+
 2003-12-28  Roger Sayle  <roger@eyesopen.com>
 
 	PR c++/13070
