--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-29  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/13445
+	* g++.dg/template/scope2.C: New test.
+
 2003-12-28  Roger Sayle  <roger@eyesopen.com>
 
 	PR c++/13070
