--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-30  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/13494
+	* tree.c (build_cplus_array_type_1): Only build a minimal array
+	type for dependent types or domains.
+
 2003-12-29  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/12774
