--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-30  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/13494
+	* g++.dg/template/array2-1.C: New test.
+	* g++.dg/template/array2-2.C: New test.
+
 2003-12-29  Mark Mitchell  <mark@codesourcery.com>
 
 	* g++.old-deja/g++.pt/static11.C: Correct XFAIL syntax.
