--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,8 @@
 2003-12-30  Nathan Sidwell  <nathan@codesourcery.com>
 
+	PR c++/13507
+	* g++.dg/ext/attrib11.C: New test.
+
 	PR c++/13494
 	* g++.dg/template/array2-1.C: New test.
 	* g++.dg/template/array2-2.C: New test.
