--- a/csl-arm-branch/gcc/ChangeLog
+++ b/csl-arm-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-30  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* builtins.c (expand_builtin_apply_args_1): Fix typo in previous
+	change.
+
 2003-12-29  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* builtins.c (expand_builtin_apply_args_1): Add pretend args size
