--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-30  Jan Hubicka  <jh@suse.cz>
+
+	PR ice/11936
+	* i386.h (CLASS_LIKELY_SPILLED_P): Return true for FP_TOP_REG/FP_SECOND_REG
+
 2003-12-30  Steven Bosscher  <steven@gcc.gnu.org>
 
 	Backport from tree-ssa (relevant changes only):
