2003-12-30  Guilhem Lavaux <guilhem@kaffe.org>
	* java/io/LineNumberReader.java
	(countLines): Removed.
	(fill): New private method.
	(mark): Changed logic to use and matchedNewLine.
	(reset): Likewise.
	(read): Likewise.
	(skipRedundantLF): Likewise.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75232 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,13 @@
+2003-12-30  Guilhem Lavaux <guilhem@kaffe.org>
+
+	* java/io/LineNumberReader.java
+	(countLines): Removed.
+	(fill): New private method.
+	(mark): Changed logic to use and matchedNewLine.
+	(reset): Likewise.
+	(read): Likewise.
+	(skipRedundantLF): Likewise.
+
 2003-12-30  Michael Koch  <konqueror@gmx.de>
 
 	* gnu/java/net/protocol/http/Connection.java
